--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -12,6 +13,7 @@
     "babel-plugin-named-asset-import": "^0.2.2",
     "babel-preset-react-app": "^5.0.4",
     "bfj": "6.1.1",
+    "bootstrap": "^4.1.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "classnames": "^2.2.6",
@@ -42,6 +44,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "resolve": "1.8.1",
